# CGNSMod

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  cmake_install.cmake
Meshes/: CoarseLoro.cgns  prova.cgns  prova.pw  provaT.cgns  provaTMore.cgns  provaT_1.cgns  provaT_2.cgns  provaT_3.cgns  provaT_Merged.cgns  provaTria.cgns  provaTria.pw  provaTriaMore.pw  provaTria_ConQuads.cgns  provaTria_ConQuads_SingleZone.cgns
include/: functions.h
libs/: CGNS  hdf5
tools/: main.cpp
